--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ before_install:
   - sudo apt-get install -y --allow-unauthenticated ros-$ROS_DISTRO-move-base ros-$ROS_DISTRO-geometry-msgs ros-$ROS_DISTRO-sensor-msgs ros-$ROS_DISTRO-cv-bridge ros-$ROS_DISTRO-image-transport ros-$ROS_DISTRO-std-msgs
   # Source ros melodic setup file
   - curl -sSL http://get.gazebosim.org | sh
+  - sudo rosdep init
   - sudo rosdep update
   - sudo rm /home/username/.ros/rosdep/sources.cache/index
   - sudo rm /etc/ros/rosdep/sources.list.d/20-default.list
