--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,10 +35,12 @@ if (CATKIN_ENABLE_TESTING)
   
   add_rostest_gtest(
    test_gas 
-   test/test.launch  
+   test/test.launch
+   test/detecttest.cpp  
    test/collect_test.cpp 
    test/main_test.cpp 
-   src/collect.cpp)
+   src/collect.cpp
+   src/detection.cpp)
 
   target_link_libraries(
    test_gas 
