--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ if (CATKIN_ENABLE_TESTING)
   add_rostest_gtest(
    test_gas 
    test/test.launch
-   test/detecttest.cpp  
+   #test/detecttest.cpp  
    test/collect_test.cpp 
    test/main_test.cpp 
    src/collect.cpp
