--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
     - ROSINSTALL_FILE=$CI_SOURCE_PATH/dependencies.rosinstall
     - CATKIN_OPTIONS=$CI_SOURCE_PATH/catkin.options
     - ROS_PARALLEL_JOBS='-j8 -l6'
-    - COVERAGE=$CI_SOURCE_PATH/test_gas.dir/src
+    - COVERAGE=$CI_SOURCE_PATH/test_gas.dir
 
 ################################################################################
 
@@ -80,8 +80,9 @@ script:
   - catkin_make 
 
 after_success:
-  - cd ~/catkin_ws/build/gas/CMakeFiles/test_gas.dir/src
-  - ln -s $COVERAGE .
+  - cd ~/catkin_ws/build/gas/CMakeFiles
+  - rm -rf ./test_gas.dir
+  - ln -s $COVERAGE
   - cd ..
   - cd ..
   - lcov --directory . --capture --output-file coverage.info
