--- a/.travis.yml
+++ b/.travis.yml
@@ -80,12 +80,6 @@ script:
   - catkin_make 
 
 after_success:
-  - cd ~/catkin_ws/build/gas/CMakeFiles
-  - rm -rf ./test_gas.dir
-  - ln -s $COVERAGE
-  - cd ..
-  - cd ..
-  - lcov --directory . --capture --output-file coverage.info
-  - lcov --remove coverage.info '/opt/*' '/usr/*' '*/devel/*' '*test_*' '*_test*' --output-file coverage.info
+  - cd ~/catkin_ws/gas
   - lcov --list coverage.info
   - coveralls-lcov coverage.info
